/*
 * Copyright 2017-present Open Networking Foundation
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
syntax = "proto3";
option java_package = "org.onosproject.grpc.net.flow.models";

package net.flow;

import "net/flow/instructions/InstructionsProto.proto";
import "net/flow/instructions/InstructionProto.proto";

// Corresponds to org.onosproject.net.flow.TrafficTreatment.
message TrafficTreatmentProto {
    repeated net.flow.instructions.InstructionProto deferred = 1;
    repeated net.flow.instructions.InstructionProto immediate = 2;
    repeated net.flow.instructions.InstructionProto all_instructions = 3;
    net.flow.instructions.TableTypeTransitionProto table_transition = 4;
    bool cleared_deferred = 5;
    net.flow.instructions.MetadataInstructionProto write_metadata = 6;
    net.flow.instructions.MetadataInstructionProto metered = 7;
}